2011-09-27  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_CHECK_FOR_SYSCALLS): Include checks
	for required headers: sys/epoll.h and
	attr/xattr.h.

2011-09-26  Xerxes Rånby  <xerxes@zafena.se>
	    Mark David Dumlao  <madumlao@gmail.com>

	JamVM
	- Skip Java-reflection-related DelegatingClassLoaders,
	  enables JamVM to run NetBeans.
	- Generic JNI stubs for common JNI method signatures.
	- Fix memory heap arguments in terms of gigabytes.
	* NEWS: Updated.
	* patches/jamvm/gb-memory-fix.patch: New patch contributed by
	  Mark David Dumlao.
	* patches/jamvm/jmm_GetLongAttribute_201.patch:
	  Replaced by upstream, Tidy-ups,
	  changeset 106ffbb35fb9c185ba8c649441036d00e44c6a32.
	* Makefile.am
	(ICEDTEA_PATCHES): Apply new JamVM patch, remove upstreamed JamVM patch.
	(JAMVM_VERSION): Updated JamVM to 2011-09-24 revision.
	(JAMVM_SHA256SUM): Updated.

2011-09-21  Andrew John Hughes  <ahughes@redhat.com>

	PR717: Remove all non-bootstrap non-conditional
	patches.
	* patches/6592792.patch,
	* patches/6733959.patch,
	* patches/6755943.patch:
	Remove unused patches.
	* patches/alpha-fixes.patch,
	* patches/alt-jar.patch,
	* patches/cacao/arch.patch,
	* patches/clean-crypto.patch,
	* patches/debian/uname.patch,
	* patches/disable-intree-ec.patch:
	Moved upstream.
	* patches/javafiles.patch:
	Moved to boot.
	* patches/jtreg-httpTest.patch,
	* patches/jvmtiEnv.patch,
	* patches/lc_ctype.patch,
	* patches/override-redirect-metacity.patch,
	* patches/params-cast-size_t.patch:
	Moved upstream.
	* patches/parisc-opt.patch: Obsolete.
	* patches/parisc.patch,
	* patches/samejvm-safe.patch,
	* patches/security-updates.patch,
	* patches/security/6592792.patch,
	* patches/security/6733959.patch,
	* patches/security/6755943.patch,
	* patches/sh4-support.patch,
	* patches/signed-types.patch:
	Moved upstream.
	* patches/sources.patch: Obsolete.
	* patches/sparc-ptracefix.patch,
	* patches/sparc-trapsfix.patch,
	* patches/systemtap-gcc-4.5.patch,