@@ -1,6 +1,16 @@
 2011-09-27  Andrew John Hughes  <ahughes@redhat.com>
 
 	* acinclude.m4:
+	Always quote using '[' and ']' in macro calls.
+	(IT_CHECK_FOR_JPEG): Replace quotation marks
+	with '[' and ']'.
+	(IT_CHECK_FOR_GIF): Likewise.
+	(IT_CHECK_FOR_CUPS): Likewise.
+	(IT_CHECK_FOR_SYSCALLS): Likewise.
+
+2011-09-27  Andrew John Hughes  <ahughes@redhat.com>
+
+	* acinclude.m4:
 	(IT_CHECK_FOR_SYSCALLS): Include checks
 	for required headers: sys/epoll.h and
 	attr/xattr.h.
